--- a/src/App.scss
+++ b/src/App.scss
@@ -4,8 +4,9 @@
 }
 
 .app {
+    margin: 1rem;
+    padding: 0.75rem;
     border: 2px solid black;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
 }
