--- a/src/containers/Navbar/Navbar.scss
+++ b/src/containers/Navbar/Navbar.scss
@@ -2,5 +2,5 @@
     border: 2px solid red;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
 }
