--- a/src/App.scss
+++ b/src/App.scss
@@ -4,9 +4,17 @@
 }
 
 .app {
-    margin: 1rem;
-    padding: 0.75rem;
-    border: 2px solid black;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+
+    &__content {
+        margin: 1rem;
+        padding: 0.75rem;
+        border: 2px solid black;
+        display: flex;
+        flex-direction: row;
+    }
 }
