--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,9 +1,14 @@
 .card {
     border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 25rem;
+    padding: 1rem;
+
 
     &__image {
-        max-width: 100%;
-        height: auto;
-
+        max-height: 15rem;
     }
 }
