--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,2 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Frijole&family=Harmattan&family=Mukta+Mahee&display=swap");
 
-$color-background: #F6AE2D;
+$font-title: "Frijole", "sans-serif";
+$font-text: "Mukta Mahee";
+$font-filter: "Harmattan";
+
+$font-large: 2rem;
+$font-medium: 1.25rem;
+$font-small: 0.85rem;
+
+$color-background: #f6ae2d;
