--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
+  width: 100%;
 
   &__title {
     font-family: $font-title;
